# E.L.S.H.A.D.D.A.I.

./: PRODUCTION_RUNBOOK.md  README.md  pyproject.toml  requirements.txt  run_el_shaddai_production.py  run_parallax.py
configs/: production_lumus8.yaml
data/: sample_arcadia_prices.csv  sample_atlas_inputs.csv  sample_aura_prices.csv  sample_gaia_prices.csv  sample_inferno_inputs.csv  sample_lode_inputs.csv  sample_oracle_inputs.csv  sample_prices.csv  sample_role_inputs.json
el_shaddai/: __init__.py  arcadia_adapter.py  atlas_adapter.py  aura_adapter.py  cli.py  config.py  data_loader.py  fred_data.py  gaia_adapter.py  history_lens.py  inferno_adapter.py  integrated_audit.py  integrated_audit_json.py  labels.py  lode_adapter.py  market_context_adapter.py  models.py  oracle_adapter.py  parallax.py  price_score.py  production.py  production_archive.py  production_manifest.py  report.py  report_renderer.py  role_score.py  scoring.py  text_sanitizer.py  visualization.py
notebooks/: production_control_notebook_v1.md
tests/: test_arcadia_adapter.py  test_atlas_adapter.py  test_aura_adapter.py  test_data_dependency_handling.py  test_fred_resilience.py  test_gaia_adapter.py  test_history_lens.py  test_inferno_adapter.py  test_integrated_audit.py  test_integrated_audit_demo.py  test_integrated_audit_json.py  test_lode_adapter.py  test_market_context_adapter.py  test_oracle_adapter.py  test_output_sanitization.py  test_parallax.py  test_price_score.py  test_production.py  test_production_archive.py  test_report_renderer.py  test_role_aggregation.py  test_role_score.py  (+2 more)
(+5 files in other folders)
