[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "el-shaddai-diagnostics"
version = "2.0"
description = "Transparent El Shaddai health diagnostics"
requires-python = ">=3.10"

[project.optional-dependencies]
data = [
  "yfinance",
  "pandas",
  "pandas-datareader",
  "fredapi",
  "requests",
  "PyYAML",
]

[tool.setuptools.packages.find]
include = ["el_shaddai*"]
